--- a/periscope-web/src/main/webapp/pages/project/report/allReports/mainIPC.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/report/allReports/mainIPC.xhtml
@@ -26,7 +26,7 @@
 
                     <p:barChart id="horizontal" value="#{mainIPCController.model}" rendered="#{mainIPCController.model.series.get(0).getData().size()!=0}"
                                 orientation="horizontal" legendPosition="e" datatipFormat="%s"
-                                title="#{msgs['main.classifications']}" style="width:600px ; height:300px" />
+                                title="#{msgs['main.classifications']}"  />
 
                     <h:column>
                         <p:graphicImage />
