--- a/periscope-web/src/main/webapp/pages/project/report/allReports/mainTechnologicalProfile.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/report/allReports/mainTechnologicalProfile.xhtml
@@ -29,7 +29,7 @@
 
                     <p:barChart id="horizontal" value="#{mainIPCController.model}" rendered="#{mainIPCController.model.series.get(0).getData().size()!=0}"
                                 orientation="horizontal" legendPosition="e" datatipFormat="%s"
-                                title="#{msgs['technological.profile.applicant']}" style="width:600px ; height:300px" />
+                                title="#{msgs['technological.profile.applicant']}" />
 
                     <h:column>
                         <p:graphicImage />
