--- a/periscope-web/src/main/webapp/pages/project/harmonization/inventorsHarmonization.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/harmonization/inventorsHarmonization.xhtml
@@ -36,10 +36,11 @@
                 <p:column headerText="">					
                     <p:selectBooleanCheckbox id="campo" 
                                              value="#{pa.selected}" >
-                        <p:ajax event="change" update=":tabView:formAl:selectedInventors,@this,:#{p:component('panelSugestions')}" listener="#{inventorHarmonizationController.onSelectInventor(pa)}"/>
+                        <p:ajax event="change" update=":tabView:formAl:selectedInventors,@this,:#{p:component('panelSugestions')}" 
+                                listener="#{inventorHarmonizationController.onSelectInventor(pa)}"/>
                     </p:selectBooleanCheckbox>	
                 </p:column>		
-                <p:column headerText="#{msgs['name']}" sortBy="#{pa.name}" filterBy="#{pa.name}">														
+                <p:column headerText="#{msgs['name']}" sortBy="#{pa.name}" filterBy="#{pa.name}" filterStyle="width: 250px">														
                     #{pa.name}					
                 </p:column>
                 <p:column headerText="#{msgs['country']}" sortBy="#{pa.country.name}">														
