--- a/periscope-web/src/main/webapp/pages/project/harmonization/ruleList.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/harmonization/ruleList.xhtml
@@ -11,6 +11,9 @@
             <ui:include src="/template/flashmessages.xhtml" />
             <h2>#{msgs['harmonization.rules']}</h2>
             <br/>
+            <h:form>
+                <p:commandButton value="#{msgs['back']}" action="harmonizationHome" ajax="false" />
+            </h:form>
             <p:tabView id="tabView" dynamic="true"> 
                 <p:tab id="tab1" title="#{msgs['applicants']}">				
                     <p:dataTable id="ruleApplicants" var="rule" style="font-size:12px"
