--- a/periscope-web/src/main/webapp/pages/project/patent/patentAdd.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/patent/patentAdd.xhtml
@@ -20,11 +20,11 @@
                             <p:inputText value="#{patentController.selectedPatent.applicationNumber}" required="true" 
                                          requiredMessage="#{msgs['application.number']} #{msgs['obligatory.field']}"/>
                             <h:outputLabel value="#{msgs['application.date']}: " style="font-weight: bold"/>
-                            <p:calendar value="#{patentController.selectedPatent.applicationDate}" />
+                            <p:calendar value="#{patentController.selectedPatent.applicationDate}" navigator="true"/>
                             <h:outputLabel value="#{msgs['publication.number']}: " style="font-weight: bold"/>
                             <p:inputText value="#{patentController.selectedPatent.publicationNumber}"/>
                             <h:outputLabel value="#{msgs['publication.date']}: " style="font-weight: bold"/>
-                            <p:calendar value="#{patentController.selectedPatent.publicationDate}" />
+                            <p:calendar value="#{patentController.selectedPatent.publicationDate}" navigator="true"/>
                             <h:outputLabel value="#{msgs['title']}*: " style="font-weight:bold" />
                             <p:inputTextarea value="#{patentController.selectedPatent.titleSelect}" required="true" 
                                              requiredMessage="#{msgs['title']} #{msgs['obligatory.field']}"/>
@@ -70,7 +70,7 @@
                                 <h:outputLabel value="#{msgs['value']}" style="font-weight:bold" />
                                 <p:inputText value="#{patentController.newPriority.value}"/>
                                 <h:outputLabel value="#{msgs['date']}" style="font-weight:bold" />
-                                <p:calendar value="#{patentController.newPriority.date}" />
+                                <p:calendar value="#{patentController.newPriority.date}" navigator="true" />
                                 <h:outputLabel value="#{msgs['country']}" style="font-weight:bold"/>				
                                 <p:selectOneMenu value="#{patentController.newPriority.country.acronym}">
                                     <f:selectItems value="#{patentController.countries}" var="country" 
@@ -260,9 +260,9 @@
                         </p:fieldset>
 
                 <h:panelGrid columns="2" cellpadding="10">
-                    <p:commandButton value="#{msgs['options.file']}"
+                    <p:commandButton value="#{msgs['presentation.file']}"
                                      onclick="fileDownloadDialog.show();"/>
-                    <p:commandButton value="#{msgs['options.patent']}"
+                    <p:commandButton value="#{msgs['patent.info']}"
                                      onclick="patentDownloadDialog.show();"/>
 
                 </h:panelGrid>
