--- a/periscope-web/src/main/webapp/pages/project/report/allReports/priorityDate.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/report/allReports/priorityDate.xhtml
@@ -16,7 +16,7 @@
 
             <h:form id="chart" styleClass="container">
 
-                <center><h1>#{msgs['priorities']} / #{msgs['year']}</h1></center>
+                <center><h1>#{msgs['priorities.number']} / #{msgs['year']}</h1></center>
                 <br/>
                 <p:selectBooleanCheckbox id="complete" itemLabel="#{msgs['completo']}"
                                          value="#{priorityDateController.filtro.complete}">
