--- a/periscope-web/src/main/webapp/pages/project/harmonization/dialogInventorRule.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/harmonization/dialogInventorRule.xhtml
@@ -73,6 +73,10 @@
             </h:panelGrid>
             <p:spacer height="50"/>
             <center>
+                <h:outputLabel rendered="#{inventorHarmonizationController.harmonized || inventorHarmonizationController.sugHarmonized}"
+                               value="#{msgs['saving.overwrite']}" style="font-weight:bold" />
+            </center>
+            <center>
                 <p:commandButton value="#{msgs['save.apply']}" action="#{inventorHarmonizationController.createRule()}" oncomplete="invSugestionsDialog.hide()"/>
 
                 <p:commandButton value="#{msgs['cancel']}" immediate="true"
