--- a/periscope-web/src/main/webapp/pages/project/harmonization/ruleList.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/harmonization/ruleList.xhtml
@@ -54,19 +54,19 @@
                                                    style="color:white;margin-right: 10px" class="btn btn-inverse"
                                                    action="#{ruleController.applyApplicant(rule)}">	
                                     </h:commandLink>
-                                    <h:commandLink value="#{msgs['delete']}"
+                                    <h:commandLink value="#{msgs['undo.delete']}"
                                                    style="color:white;margin-right: 10px" class="btn btn-inverse"
                                                    onclick="if (!confirm('#{msgs['you.sure']}')) {
                                                                return false;
                                                            }" 
-                                                   action="#{ruleController.delete(rule.id.toString())}">										
+                                                   action="#{ruleController.delete(rule.name, rule.id.toString())}">										
                                     </h:commandLink>
-                                    <h:commandLink value="#{msgs['undo']}" 
+<!--                                    <h:commandLink value="#{msgs['undo']}" 
                                                    style="color:white;margin-right: 10px" class="btn btn-inverse"
                                                    onclick="if (!confirm('#{msgs['you.sure']}')) {
                                                                return false;
                                                            }"
-                                                   action="#{ruleController.undo(rule.name)}"/>
+                                                   action="#{ruleController.undo(rule.name)}"/>-->
                                 </h:form>
                             </center>
                         </p:column>
