Desfazer regras do tipo inventor criado mas não ativado ainda

--- a/periscope-web/src/main/webapp/pages/project/harmonization/ruleList.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/harmonization/ruleList.xhtml
@@ -59,7 +59,7 @@
                                                    onclick="if (!confirm('#{msgs['you.sure']}')) {
                                                                return false;
                                                            }" 
-                                                   action="#{ruleController.delete(rule.name, rule.id.toString())}">										
+                                                   action="#{ruleController.deleteAppRule(rule.name, rule.id.toString())}">										
                                     </h:commandLink>
                                 </h:form>
                             </center>
