--- a/periscope-web/src/main/webapp/pages/project/harmonization/ruleList.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/harmonization/ruleList.xhtml
@@ -127,12 +127,12 @@
                                                    style="color:white;margin-right: 10px" class="btn btn-inverse"
                                                    action="#{ruleController.applyInventor(rule)}">	
                                     </h:commandLink>
-                                    <h:commandLink value="#{msgs['delete']}"
+                                    <h:commandLink value="#{msgs['undo.delete']}"
                                                    style="color:white;margin-right: 10px" class="btn btn-inverse"
                                                    onclick="if (!confirm('#{msgs['you.sure']}')) {
                                                                return false;
                                                            }"
-                                                   action="#{ruleController.delete(rule.id.toString())}">										
+                                                   action="#{ruleController.deleteInvRule(rule.name, rule.id.toString())}">										
                                     </h:commandLink>
                                 </h:form>
                             </center>
