--- a/periscope-web/src/main/webapp/pages/project/harmonization/dialogApplicantRule.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/harmonization/dialogApplicantRule.xhtml
@@ -93,7 +93,7 @@
                                          else {
                                              return true;
                                          }"
-                                 update=":#{p:component('formAll')}"/>
+                                 update=":#{p:component('selectedApplicants')}"/>
                 <p:commandButton value="#{msgs['cancel']}" immediate="true"
                                  oncomplete="sugestionsDialog.hide()" />
             </center>
