--- a/periscope-web/src/main/webapp/pages/project/harmonization/dialogInventorRule.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/harmonization/dialogInventorRule.xhtml
@@ -82,7 +82,7 @@
                                          else {
                                              return true;
                                          }"
-                                 update=":#{p:component('formAll')}"/>
+                                 update=":#{p:component('selectedInventors')}"/>
 
                 <p:commandButton value="#{msgs['cancel']}" immediate="true"
                                  oncomplete="invSugestionsDialog.hide()" />
